--- a/Week_5/Day_2/index.html
+++ b/Week_5/Day_2/index.html
@@ -11,13 +11,13 @@
     <div class="container">
       <form class="search" action="">
         <input type="text" class="artistsearch" name="name" value="" placeholder="Insert the artist">
-        </form>
-        <div class="results">
-        </div>
-        <div class="albums">
-        </div>
-        <div class="tracks">
-        </div>
+      </form>
+      <div class="artists">
+      </div>
+      <div class="albums">
+      </div>
+      <div class="tracks">
+      </div>
     </div>
   </body>
 </html>
