--- a/Week_5/Day_5/spotify-skeleton/index.html
+++ b/Week_5/Day_5/spotify-skeleton/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Spotify Player</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="script.js" charset="utf-8"></script>
@@ -9,102 +9,63 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
-<body>
-	<div class="search">
-		<form class="search-form" action="#">
-			<input type="text" name="track" value="" placeholder="Search a song">
-			<input type="submit" name="search" value="Search">
-			<input type="button" name="more-results" value="More results" disabled="disabled">
-		</form>
-	</div>
-	<div class="widget">
-		<div class="header">
-		<div class="btn-play disabled"></div>
-
-		<div class="metadata">
-		  <p class="title">Hunger of The Pine</p>
-		  <p class="author">alt-J</p>
-
-		  <div class="seekbar">
-		    <progress value="0" max="30"></progress>
-		  </div>
+	<body>
+		<div class="search">
+			<form class="search-form" action="#">
+				<input type="text" name="track" value="" placeholder="Search a song">
+				<input type="submit" name="search" value="Search">
+				<input type="button" name="more-results" value="More results" disabled="disabled">
+			</form>
 		</div>
+		<div class="widget">
+			<div class="header">
+			<div class="btn-play disabled"></div>
+			<div class="metadata">
+			  <p class="title">Hunger of The Pine</p>
+			  <p class="author">alt-J</p>
+			  <div class="seekbar">
+			    <progress value="0" max="30"></progress>
+			  </div>
+			</div>
+			</div>
+			<div class="cover">
+			<img src="https://i.scdn.co/image/04da6dfc1f5f45fdeba938a0cc71cf372524fd43">
+			</div>
+			<audio src="https://p.scdn.co/mp3-preview/8e9c5ffdc38e91659bfe8b6bd44650dfc25a3d31" class="js-player"></audio>
 		</div>
-		<div class="cover">
-		<img src="https://i.scdn.co/image/04da6dfc1f5f45fdeba938a0cc71cf372524fd43">
-		</div>
-
-		<audio src="https://p.scdn.co/mp3-preview/8e9c5ffdc38e91659bfe8b6bd44650dfc25a3d31" class="js-player"></audio>
-	</div>
-	<div class="modal fade js-modal">
-	  <div class="modal-dialog">
-	    <div class="modal-content" style="overflow: auto;">
-
-	      <div class="modal-header">
-	        <!-- Close button -->
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span>&times;</span>
-	        </button>
-
-	        <h2 class="js-artist-name">This is the modal's header.</h2>
-
-	      </div>
-
-	      <div class="modal-body">
-	        <img class="js-artist-image"src=""/>
-					<p><span class="artist-atributes">Followers: </span><span class="js-artist-followers"></span></p>
-					<p><span class="artist-atributes">Popularity: </span><span class="js-artist-popularity"></span></p>
-					<input type="button" name="see-albums" value="">
-	      </div>
-
-	    </div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
-	<div class="modal fade js-more-results">
-	  <div class="modal-dialog">
-	    <div class="modal-content" style="overflow: auto;">
-
-	      <div class="modal-header">
-	        <!-- Close button -->
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span>&times;</span>
-	        </button>
-
-	        <h2 class="js-track-name">This is the modal's header.</h2>
-
-	      </div>
-
-	      <div class="modal-body">
-	        <ul class="list-more-results">
-
-	        </ul>
-	      </div>
-
-	    </div><!-- /.modal-content -->
-	  </div><!-- /.modal-dialog -->
-	</div>
-		<div class="modal fade js-artist-albums">
+		<div class="modal fade js-modal">
 		  <div class="modal-dialog">
 		    <div class="modal-content" style="overflow: auto;">
-
 		      <div class="modal-header">
-		        <!-- Close button -->
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		          <span>&times;</span>
 		        </button>
-
-		        <h2 class="js-artist-albums-name">This is the modal's header.</h2>
-
+		        <h2 class="js-artist-name">This is the modal's header.</h2>
 		      </div>
-
 		      <div class="modal-body">
-		        <ul class="list-artist-albums">
-
+		        <img class="js-artist-image"src=""/>
+						<p><span class="artist-atributes">Followers: </span><span class="js-artist-followers"></span></p>
+						<p><span class="artist-atributes">Popularity: </span><span class="js-artist-popularity"></span></p>
+						<input type="button" name="see-albums" value="">
+		      </div>
+		    </div>
+		  </div>
+		</div>
+		<div class="modal fade js-more-results js-artist-albums">
+		  <div class="modal-dialog">
+		    <div class="modal-content" style="overflow: auto;">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span>&times;</span>
+		        </button>
+		        <h2 class="js-track-name js-artist-albums-name">This is the modal's header.</h2>
+		      </div>
+		      <div class="modal-body">
+		        <ul class="list-more-results list-artist-albums">
 		        </ul>
 		      </div>
-
-		    </div><!-- /.modal-content -->
-		  </div><!-- /.modal-dialog -->
-		</div><!--
-</body>
+		    </div>
+		  </div>
+		</div>
+	</body>
 </html>
